[package]
name = "redis-stream-core"
version = "0.1.0"
authors = ["bso <sergey.boyko0791@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
futures = "0.1"
tokio = "0.1"
tokio-io = "0.1"
tokio-tcp = "0.1"
tokio-core = "0.1"
byteorder = "*"
bytes = "0.4.12"

#[target."cfg(unix)".dependencies.tokio-uds]
#version = "0.2"
